--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "awesome-select",
   "version": "1.0.0",
   "description": "[![Support](https://supporterhq.com/api/b/9okwcyts1gevgy53glt8ffpyc)](https://supporterhq.com/give/9okwcyts1gevgy53glt8ffpyc)",
-  "main": "index.js",
+  "main": "package/js/awselect.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
